MyTemplate.yml
Resources:
  MyEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0528a5175983e7f28 
      KeyName: MyKeyPair
      Monitoring: False
      SecurityGroups: 
        - MySSH
        - MyHTTP
      Tags: 
        - Key: User
          Value: John
        - Key: City
          Value: "Des Moines"
      UserData:
        - Fn::Base64: AWS Cloudformation
        - Fn::Base64: echo "Hello World!"
  MyEc2KeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyFormat: pem
      KeyName: NameKeyCreated
      KeyType: rsa
      # Inlcude Public Key material to import an existing key
      # Omit PUblic Key Material to creat a new key
      PublicKeyMaterial: String
      Tags: 
        - Key: Created
          Value: 20240208
  MyEc2SecurityGroupSSH:
    Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: Applies to any instance where SSH from own IP address is required
        GroupName: MySSH
        SecurityGroupIngress: 
            CidrIp: 92.34.128.65/32
            Description: Allows SSH from my IP address into the protected resource
            FromPort: 22
            IpProtocol: TCP
            ToPort: 22
        Tags: 
          - Key: Note
            Value: insert something useful here
    MyEc2SecurityGroupHTTP:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: Applies to any instance where http ingress is required
        GroupName: MyHTTP
        SecurityGroupIngress: 
            CidrIp: 92.34.128.65/32
            Description: Allows http from my IP address into the protected resource
            FromPort: 80
            IpProtocol: TCP
            ToPort: 80
        Tags: 
          - Key: Note
            Value: insert something useful here
        VpcId: String
